--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="./img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a role="button" class="btn btn-warning" href="#reservationForm">Reserve Table</a>
+                </div>
             </div>
         </div>
     </header>
@@ -56,7 +59,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="./img/uthappizza.png" alt="uthappizza">
                     <div class="media-body">
                         <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
             </div>
@@ -64,16 +67,16 @@
 
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div class="col-12 col-sm-4 order-sm-first col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
+            <div class="col col-sm order-sm-last col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="./img/buffet.png" alt="uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
-                       <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                       <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="./img/buffet.png" alt="uthappizza">
                 </div>
              </div>
         </div>
@@ -88,7 +91,63 @@
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
-                        <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>        
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="reservationForm" class="row row-content align-items-center" >
+            <div class="col-12 offset-0 col-md-8 offset-md-2">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+                    <div class="card-block">
+                        <form>
+                            <div class="form-group row">
+                                <label for="numberofguests" class=" offset-md-1 col-md-2 col-form-label"> <strong>Number of Guests</strong></label>
+                                <div class="col-md-9">
+                                    <div class="btn-group" >
+                                        <label class="btn">
+                                            <input type="radio" name="guests" value="1" autocomplete="off"><strong>1</strong>
+                                        </label>
+                                        <label class="btn">
+                                            <input type="radio" name="guests" value="2" autocomplete="off"><strong>2</strong>
+                                        </label>
+                                        <label class="btn">
+                                            <input type="radio" name="guests" value="3" autocomplete="off"><strong>3</strong>
+                                        </label>
+                                        <label class="btn">
+                                            <input type="radio" name="guests" value="4" autocomplete="off"><strong>4</strong>
+                                        </label>
+                                        <label class="btn">
+                                            <input type="radio" name="guests" value="5" autocomplete="off"><strong>5</strong>
+                                        </label>
+                                        <label class="btn">
+                                            <input type="radio" name="guests" value="6" autocomplete="off"><strong>6</strong>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="dateandtime" class="offset-md-1 col-md-2 col-form-label"><strong>Date and Time</strong></label>
+                                <div class="col-md-3">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"></span>
+                                        <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"></span>
+                                        <input class="form-control" type="time" name="hourBooking" value="" placeholder="Time">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-3 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
