--- a/index.html
+++ b/index.html
@@ -83,15 +83,88 @@
                     <img src="./img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-warning" 
-                       data-toggle="tooltip" data-html="true" 
-                       title="or Call Us at <br><strong>+852 12345678</strong>" 
-                       data-placement="bottom" href="#reservationForm">Reserve Table
+                    <a role="button" class="btn btn-warning" data-toggle="modal" data-target="#reserveModal" href="#reserveModal">
+                        Reserve Table
                     </a>
                 </div>
             </div>
         </div>
     </header>
+ 
+    <div id="reserveModal" class="modal fade align-items-center" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group row">
+                        <label for="numberofguests" class="col-md-2 col-form-label"><strong>Number of Guests</strong></label>
+                        <div class="col-8">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked="">
+                                <label class="form-check-label" for="inlineRadio1"><strong>1</strong></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2"><strong>2</strong></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                <label class="form-check-label" for="inlineRadio3"><strong>3</strong></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                <label class="form-check-label" for="inlineRadio4"><strong>4</strong></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                <label class="form-check-label" for="inlineRadio5"><strong>5</strong></label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                <label class="form-check-label" for="inlineRadio6"><strong>6</strong></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="smoking" class="col-md-2 col-form-label"><strong>Section</strong></label>
+                        <div class="btn-group btn-group-toggle smokingsection col-4" data-toggle="buttons">
+                            <label class="btn btn-success active">
+                                <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                            </label>
+                            <label class="btn btn-danger">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="dateandtime" class="col-md-2 col-form-label"><strong>Date and Time</strong></label>
+                        <div class="col-4">
+                            <div class="input-group">
+                                <span class="input-group-addon"></span>
+                                <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="input-group">
+                                <span class="input-group-addon"></span>
+                                <input class="form-control" type="time" name="hourBooking" value="" placeholder="Time">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-8">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </div>
 
     <div class="container">
         <div class="row row-content">
@@ -132,6 +205,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,8 +230,6 @@
                 </div>
             </div>
         </div>
-
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-first col-md-3">
                 <h3>This Month's Promotions</h3>
@@ -163,9 +242,8 @@
                     </div>
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="./img/buffet.png" alt="uthappizza">
                 </div>
-             </div>
+            </div>
         </div>
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
@@ -181,64 +259,7 @@
                 </div>
             </div>
         </div>
-        <div id="reservationForm" class="row row-content align-items-center" >
-            <div class="col-12 offset-0 col-md-8 offset-md-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a table</h3>
-                    <div class="card-block">
-                        <form>
-                            <div class="form-group row">
-                                <label for="numberofguests" class=" offset-md-1 col-md-2 col-form-label"> <strong>Number of Guests</strong></label>
-                                <div class="col-md-9">
-                                    <div class="btn-group" >
-                                        <label class="btn">
-                                            <input type="radio" name="guests" value="1" autocomplete="off"><strong>1</strong>
-                                        </label>
-                                        <label class="btn">
-                                            <input type="radio" name="guests" value="2" autocomplete="off"><strong>2</strong>
-                                        </label>
-                                        <label class="btn">
-                                            <input type="radio" name="guests" value="3" autocomplete="off"><strong>3</strong>
-                                        </label>
-                                        <label class="btn">
-                                            <input type="radio" name="guests" value="4" autocomplete="off"><strong>4</strong>
-                                        </label>
-                                        <label class="btn">
-                                            <input type="radio" name="guests" value="5" autocomplete="off"><strong>5</strong>
-                                        </label>
-                                        <label class="btn">
-                                            <input type="radio" name="guests" value="6" autocomplete="off"><strong>6</strong>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="dateandtime" class="offset-md-1 col-md-2 col-form-label"><strong>Date and Time</strong></label>
-                                <div class="col-md-3">
-                                    <div class="input-group">
-                                        <span class="input-group-addon"></span>
-                                        <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="input-group">
-                                        <span class="input-group-addon"></span>
-                                        <input class="form-control" type="time" name="hourBooking" value="" placeholder="Time">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-3 col-md-10">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    </div>     
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -286,7 +307,13 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip()
+            $("#mycarousel").carousel( { interval: 2000 } );
+            $("#carousel-pause").click(function(){
+                $('#mycarousel').carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
         });
     </script>
 </body>
